@@ -5,10 +5,10 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class WoodLeagueWave50Reinforcement extends CustomBossesConfigFields {
-    public WoodLeagueWave50Reinforcement(){
+    public WoodLeagueWave50Reinforcement() {
         super("wood_league_wave_50_reinforcement",
                 EntityType.PILLAGER,
                 true,
@@ -16,7 +16,7 @@ public class WoodLeagueWave50Reinforcement extends CustomBossesConfigFields {
                 "50");
         setFollowDistance(60);
         setMainHand(new ItemStack(Material.CROSSBOW));
-        setPowers(Arrays.asList("channel_healing.yml"));
+        setPowers(List.of("channel_healing.yml"));
         setMovementSpeedAttribute(0.6D);
         setHealthMultiplier(0.25D);
         setDamageMultiplier(0.8D);
