@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class BerserkerCharmConfig extends CustomItemsConfigFields {
     public BerserkerCharmConfig() {
@@ -12,7 +13,7 @@ public class BerserkerCharmConfig extends CustomItemsConfigFields {
                 Material.TOTEM_OF_UNDYING,
                 "&bBerserker Charm",
                 Arrays.asList("&aLose yourself in the face of", "&aoverwhelming adversity in more", "&aways than one..."));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("BLINDNESS,0,self,onHit", "FAST_DIGGING,0,self,onHit"));
         setDropWeight("1");
     }
