@@ -5,6 +5,7 @@ import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class GoblinPokerItem extends CustomItemsConfigFields {
     public GoblinPokerItem() {
@@ -12,9 +13,9 @@ public class GoblinPokerItem extends CustomItemsConfigFields {
                 true,
                 Material.TRIDENT,
                 "&8Goblin Poker",
-                Arrays.asList("&8A treasure among goblins!"));
+                List.of("&8A treasure among goblins!"));
         setEnchantments(Arrays.asList("DAMAGE_ALL,1", "DAMAGE_UNDEAD,1", "DURABILITY,1", "KNOCKBACK,1", "LOOT_BONUS_MOBS,5"));
-        setPotionEffects(Arrays.asList("WITHER,0,target,onHit"));
+        setPotionEffects(List.of("WITHER,0,target,onHit"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
 }
