@@ -4,7 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class GrapplingArrowConfig extends CustomItemsConfigFields {
     public GrapplingArrowConfig() {
@@ -12,8 +12,8 @@ public class GrapplingArrowConfig extends CustomItemsConfigFields {
                 true,
                 Material.SPECTRAL_ARROW,
                 "&6Grappling Arrow",
-                Arrays.asList("&eFire at a TARGET BLOCK to grapple!"));
-        setEnchantments(Arrays.asList("GRAPPLING_HOOK,1"));
+                List.of("&eFire at a TARGET BLOCK to grapple!"));
+        setEnchantments(List.of("GRAPPLING_HOOK,1"));
         setScalability(CustomItem.Scalability.FIXED);
         setDropWeight("1");
     }
