@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class SlowpokeCharmConfig extends CustomItemsConfigFields {
     public SlowpokeCharmConfig() {
@@ -12,7 +13,7 @@ public class SlowpokeCharmConfig extends CustomItemsConfigFields {
                 Material.CARROT_ON_A_STICK,
                 "&bSlowpoke Charm",
                 Arrays.asList("&aLet's just hope it doesn't hit", "&aitself in its confusion..."));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("SLOW,0,self,onHit", "CONFUSION,0,target,onHit"));
         setDropWeight("1");
     }
