@@ -5,6 +5,7 @@ import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class SummonWolfScrollConfig extends CustomItemsConfigFields {
     public SummonWolfScrollConfig() {
@@ -13,7 +14,7 @@ public class SummonWolfScrollConfig extends CustomItemsConfigFields {
                 Material.PAPER,
                 "&6Summon Wolf Scroll",
                 Arrays.asList("&aSummons a good boy", "&ato help you bite Elites!", "&aMake sure you pet it!"));
-        setEnchantments(Arrays.asList("SUMMON_WOLF,1"));
+        setEnchantments(List.of("SUMMON_WOLF,1"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
 }
