@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EliteCaveSpiderConfig extends MobPropertiesConfigFields {
     public EliteCaveSpiderConfig() {
@@ -11,7 +11,7 @@ public class EliteCaveSpiderConfig extends MobPropertiesConfigFields {
                 EntityType.CAVE_SPIDER,
                 true,
                 "&fLvl &2$level &fElite &3Cave Spider",
-                Arrays.asList("$player &cbecame entangled in $entity's &cweb!"),
+                List.of("$player &cbecame entangled in $entity's &cweb!"),
                 3);
     }
 }
