@@ -3,7 +3,7 @@ package com.magmaguy.elitemobs.config.mobproperties.premade;
 import com.magmaguy.elitemobs.config.mobproperties.MobPropertiesConfigFields;
 import org.bukkit.entity.EntityType;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EliteEndermiteConfig extends MobPropertiesConfigFields {
     public EliteEndermiteConfig() {
@@ -11,7 +11,7 @@ public class EliteEndermiteConfig extends MobPropertiesConfigFields {
                 EntityType.ENDERMITE,
                 true,
                 "&fLvl &2$level &fElite &7Endermite",
-                Arrays.asList("$entity &cis to $player &cwhat David is to Goliath!"),
+                List.of("$entity &cis to $player &cwhat David is to Goliath!"),
                 3);
     }
 }
